--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /nbproject/private/
+/public/storage
+/storage/*.key
+.phpunit.result.cache
+/nbproject/private/
+/nbproject/project.properties
